dart/plugin/plugin.h

typedef flutter_renderer_enums_cross_axis_alignment_t flutter_renderer_widget_cross_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_alignment_t flutter_renderer_widget_main_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_size_t flutter_renderer_widget_main_axis_size_t;
typedef flutter_renderer_enums_text_direction_t flutter_renderer_widget_text_direction_t;
typedef flutter_renderer_enums_text_baseline_t flutter_renderer_widget_text_baseline_t;
typedef flutter_renderer_enums_vertical_direction_t flutter_renderer_widget_vertical_direction_t;
typedef struct flutter_renderer_widget_own_row_t {
  int32_t __handle;
} flutter_renderer_widget_own_row_t;
typedef struct flutter_renderer_widget_borrow_row_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_row_t;
typedef struct flutter_renderer_widget_own_col_t {
  int32_t __handle;
} flutter_renderer_widget_own_col_t;
typedef struct flutter_renderer_widget_borrow_col_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_col_t;
typedef struct flutter_renderer_widget_own_text_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_t;
typedef struct flutter_renderer_widget_borrow_text_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_text_t;
typedef struct flutter_renderer_widget_own_text_rich_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_rich_t;
typedef struct flutter_renderer_widget_borrow_text_rich_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_text_rich_t;
typedef struct flutter_renderer_widget_widget_t {
  uint8_t tag;
  union {
    flutter_renderer_widget_own_col_t     col;
    flutter_renderer_widget_own_row_t     row;
    flutter_renderer_widget_own_text_t     text;
    flutter_renderer_widget_own_text_rich_t     text_rich;
  } val;
} flutter_renderer_widget_widget_t;
typedef struct {
  flutter_renderer_widget_widget_t *ptr;
  size_t len;
} flutter_renderer_widget_list_widget_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_cross_axis_alignment_t val;
} flutter_renderer_widget_option_cross_axis_alignment_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_main_axis_alignment_t val;
} flutter_renderer_widget_option_main_axis_alignment_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_main_axis_size_t val;
} flutter_renderer_widget_option_main_axis_size_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_text_direction_t val;
} flutter_renderer_widget_option_text_direction_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_text_baseline_t val;
} flutter_renderer_widget_option_text_baseline_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_vertical_direction_t val;
} flutter_renderer_widget_option_vertical_direction_t;
typedef flutter_renderer_widget_widget_t flutter_renderer_renderer_widget_t;
typedef struct flutter_renderer_renderer_error_t {
  uint8_t tag;
} flutter_renderer_renderer_error_t;
extern void flutter_renderer_widget_row_drop_own(flutter_renderer_widget_own_row_t handle);
extern flutter_renderer_widget_borrow_row_t flutter_renderer_widget_borrow_row(flutter_renderer_widget_own_row_t handle);
extern void flutter_renderer_widget_col_drop_own(flutter_renderer_widget_own_col_t handle);
extern flutter_renderer_widget_borrow_col_t flutter_renderer_widget_borrow_col(flutter_renderer_widget_own_col_t handle);
extern void flutter_renderer_widget_text_drop_own(flutter_renderer_widget_own_text_t handle);
extern flutter_renderer_widget_borrow_text_t flutter_renderer_widget_borrow_text(flutter_renderer_widget_own_text_t handle);
extern void flutter_renderer_widget_text_rich_drop_own(flutter_renderer_widget_own_text_rich_t handle);
extern flutter_renderer_widget_borrow_text_rich_t flutter_renderer_widget_borrow_text_rich(flutter_renderer_widget_own_text_rich_t handle);
void flutter_renderer_widget_widget_free(flutter_renderer_widget_widget_t *ptr);
void flutter_renderer_widget_list_widget_free(flutter_renderer_widget_list_widget_t *ptr);
void flutter_renderer_widget_option_cross_axis_alignment_free(flutter_renderer_widget_option_cross_axis_alignment_t *ptr);
void flutter_renderer_widget_option_main_axis_alignment_free(flutter_renderer_widget_option_main_axis_alignment_t *ptr);
void flutter_renderer_widget_option_main_axis_size_free(flutter_renderer_widget_option_main_axis_size_t *ptr);
void flutter_renderer_widget_option_text_direction_free(flutter_renderer_widget_option_text_direction_t *ptr);
void flutter_renderer_widget_option_text_baseline_free(flutter_renderer_widget_option_text_baseline_t *ptr);
void flutter_renderer_widget_option_vertical_direction_free(flutter_renderer_widget_option_vertical_direction_t *ptr);
void flutter_renderer_renderer_widget_free(flutter_renderer_renderer_widget_t *ptr);
void flutter_renderer_renderer_error_free(flutter_renderer_renderer_error_t *ptr);