dart/src/plugin/plugn.dart


  late final _flutter_renderer_widget_row_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_widget_own_row_t)>>(
      'flutter_renderer_widget_row_drop_own');
  late final _flutter_renderer_widget_row_drop_own =
      _flutter_renderer_widget_row_drop_ownPtr
          .asFunction<void Function(flutter_renderer_widget_own_row_t)>();

  flutter_renderer_widget_borrow_row_t flutter_renderer_widget_borrow_row(
    flutter_renderer_widget_own_row_t handle,
  ) {
    return _flutter_renderer_widget_borrow_row(
      handle,
    );
  }

  late final _flutter_renderer_widget_borrow_rowPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_borrow_row_t Function(
                  flutter_renderer_widget_own_row_t)>>(
      'flutter_renderer_widget_borrow_row');
  late final _flutter_renderer_widget_borrow_row =
      _flutter_renderer_widget_borrow_rowPtr.asFunction<
          flutter_renderer_widget_borrow_row_t Function(
              flutter_renderer_widget_own_row_t)>();

  void flutter_renderer_widget_col_drop_own(
    flutter_renderer_widget_own_col_t handle,
  ) {
    return _flutter_renderer_widget_col_drop_own(
      handle,
    );
  }

  late final _flutter_renderer_widget_col_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_widget_own_col_t)>>(
      'flutter_renderer_widget_col_drop_own');
  late final _flutter_renderer_widget_col_drop_own =
      _flutter_renderer_widget_col_drop_ownPtr
          .asFunction<void Function(flutter_renderer_widget_own_col_t)>();

  flutter_renderer_widget_borrow_col_t flutter_renderer_widget_borrow_col(
    flutter_renderer_widget_own_col_t handle,
  ) {
    return _flutter_renderer_widget_borrow_col(
      handle,
    );
  }

  late final _flutter_renderer_widget_borrow_colPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_borrow_col_t Function(
                  flutter_renderer_widget_own_col_t)>>(
      'flutter_renderer_widget_borrow_col');
  late final _flutter_renderer_widget_borrow_col =
      _flutter_renderer_widget_borrow_colPtr.asFunction<
          flutter_renderer_widget_borrow_col_t Function(
              flutter_renderer_widget_own_col_t)>();

  void flutter_renderer_widget_text_drop_own(
    flutter_renderer_widget_own_text_t handle,
  ) {
    return _flutter_renderer_widget_text_drop_own(
      handle,
    );
  }

  late final _flutter_renderer_widget_text_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_widget_own_text_t)>>(
      'flutter_renderer_widget_text_drop_own');
  late final _flutter_renderer_widget_text_drop_own =
      _flutter_renderer_widget_text_drop_ownPtr
          .asFunction<void Function(flutter_renderer_widget_own_text_t)>();

  flutter_renderer_widget_borrow_text_t flutter_renderer_widget_borrow_text(
    flutter_renderer_widget_own_text_t handle,
  ) {
    return _flutter_renderer_widget_borrow_text(
      handle,
    );
  }

  late final _flutter_renderer_widget_borrow_textPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_borrow_text_t Function(
                  flutter_renderer_widget_own_text_t)>>(
      'flutter_renderer_widget_borrow_text');
  late final _flutter_renderer_widget_borrow_text =
      _flutter_renderer_widget_borrow_textPtr.asFunction<
          flutter_renderer_widget_borrow_text_t Function(
              flutter_renderer_widget_own_text_t)>();

  void flutter_renderer_widget_text_rich_drop_own(
    flutter_renderer_widget_own_text_rich_t handle,
  ) {
    return _flutter_renderer_widget_text_rich_drop_own(
      handle,
    );
  }

  late final _flutter_renderer_widget_text_rich_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_widget_own_text_rich_t)>>(
      'flutter_renderer_widget_text_rich_drop_own');
  late final _flutter_renderer_widget_text_rich_drop_own =
      _flutter_renderer_widget_text_rich_drop_ownPtr
          .asFunction<void Function(flutter_renderer_widget_own_text_rich_t)>();

  flutter_renderer_widget_borrow_text_rich_t
      flutter_renderer_widget_borrow_text_rich(
    flutter_renderer_widget_own_text_rich_t handle,
  ) {
    return _flutter_renderer_widget_borrow_text_rich(
      handle,
    );
  }

  late final _flutter_renderer_widget_borrow_text_richPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_widget_borrow_text_rich_t Function(
                  flutter_renderer_widget_own_text_rich_t)>>(
      'flutter_renderer_widget_borrow_text_rich');
  late final _flutter_renderer_widget_borrow_text_rich =
      _flutter_renderer_widget_borrow_text_richPtr.asFunction<
          flutter_renderer_widget_borrow_text_rich_t Function(
              flutter_renderer_widget_own_text_rich_t)>();

  void flutter_renderer_widget_widget_free(
    ffi.Pointer<flutter_renderer_widget_widget_t> ptr,
  ) {
    return _flutter_renderer_widget_widget_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_widget_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_widget_t>)>>(
      'flutter_renderer_widget_widget_free');
  late final _flutter_renderer_widget_widget_free =
      _flutter_renderer_widget_widget_freePtr.asFunction<
          void Function(ffi.Pointer<flutter_renderer_widget_widget_t>)>();

  void flutter_renderer_widget_list_widget_free(
    ffi.Pointer<flutter_renderer_widget_list_widget_t> ptr,
  ) {
    return _flutter_renderer_widget_list_widget_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_list_widget_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_widget_list_widget_t>)>>(
      'flutter_renderer_widget_list_widget_free');
  late final _flutter_renderer_widget_list_widget_free =
      _flutter_renderer_widget_list_widget_freePtr.asFunction<
          void Function(ffi.Pointer<flutter_renderer_widget_list_widget_t>)>();

  void flutter_renderer_widget_option_cross_axis_alignment_free(
    ffi.Pointer<flutter_renderer_widget_option_cross_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_widget_option_cross_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_cross_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_cross_axis_alignment_t>)>>(
      'flutter_renderer_widget_option_cross_axis_alignment_free');
  late final _flutter_renderer_widget_option_cross_axis_alignment_free =
      _flutter_renderer_widget_option_cross_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<
                  flutter_renderer_widget_option_cross_axis_alignment_t>)>();

  void flutter_renderer_widget_option_main_axis_alignment_free(
    ffi.Pointer<flutter_renderer_widget_option_main_axis_alignment_t> ptr,
  ) {
    return _flutter_renderer_widget_option_main_axis_alignment_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_main_axis_alignment_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_main_axis_alignment_t>)>>(
      'flutter_renderer_widget_option_main_axis_alignment_free');
  late final _flutter_renderer_widget_option_main_axis_alignment_free =
      _flutter_renderer_widget_option_main_axis_alignment_freePtr.asFunction<
          void Function(
              ffi.Pointer<
                  flutter_renderer_widget_option_main_axis_alignment_t>)>();

  void flutter_renderer_widget_option_main_axis_size_free(
    ffi.Pointer<flutter_renderer_widget_option_main_axis_size_t> ptr,
  ) {
    return _flutter_renderer_widget_option_main_axis_size_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_main_axis_size_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_main_axis_size_t>)>>(
      'flutter_renderer_widget_option_main_axis_size_free');
  late final _flutter_renderer_widget_option_main_axis_size_free =
      _flutter_renderer_widget_option_main_axis_size_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_option_main_axis_size_t>)>();

  void flutter_renderer_widget_option_text_direction_free(
    ffi.Pointer<flutter_renderer_widget_option_text_direction_t> ptr,
  ) {
    return _flutter_renderer_widget_option_text_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_text_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_text_direction_t>)>>(
      'flutter_renderer_widget_option_text_direction_free');
  late final _flutter_renderer_widget_option_text_direction_free =
      _flutter_renderer_widget_option_text_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_option_text_direction_t>)>();

  void flutter_renderer_widget_option_text_baseline_free(
    ffi.Pointer<flutter_renderer_widget_option_text_baseline_t> ptr,
  ) {
    return _flutter_renderer_widget_option_text_baseline_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_text_baseline_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_text_baseline_t>)>>(
      'flutter_renderer_widget_option_text_baseline_free');
  late final _flutter_renderer_widget_option_text_baseline_free =
      _flutter_renderer_widget_option_text_baseline_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_widget_option_text_baseline_t>)>();

  void flutter_renderer_widget_option_vertical_direction_free(
    ffi.Pointer<flutter_renderer_widget_option_vertical_direction_t> ptr,
  ) {
    return _flutter_renderer_widget_option_vertical_direction_free(
      ptr,
    );
  }

  late final _flutter_renderer_widget_option_vertical_direction_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<
                      flutter_renderer_widget_option_vertical_direction_t>)>>(
      'flutter_renderer_widget_option_vertical_direction_free');
  late final _flutter_renderer_widget_option_vertical_direction_free =
      _flutter_renderer_widget_option_vertical_direction_freePtr.asFunction<
          void Function(
              ffi.Pointer<
                  flutter_renderer_widget_option_vertical_direction_t>)>();

  void flutter_renderer_renderer_widget_free(
    ffi.Pointer<flutter_renderer_renderer_widget_t> ptr,
  ) {
    return _flutter_renderer_renderer_widget_free(
      ptr,
    );
  }

  late final _flutter_renderer_renderer_widget_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_renderer_widget_t>)>>(
      'flutter_renderer_renderer_widget_free');
  late final _flutter_renderer_renderer_widget_free =
      _flutter_renderer_renderer_widget_freePtr.asFunction<
          void Function(ffi.Pointer<flutter_renderer_renderer_widget_t>)>();

  void flutter_renderer_renderer_error_free(
    ffi.Pointer<flutter_renderer_renderer_error_t> ptr,
  ) {
    return _flutter_renderer_renderer_error_free(
      ptr,
    );
  }
